# ffs

./: .bazelrc  BUILD.bazel  MODULE.bazel  main.cc
.github/workflows/: ci.yaml
bzl/: copts.bzl
ffs/: BUILD.bazel  main.cc
starlark/: BUILD.bazel  README.md  parser.h  parser_test.cc  token.h  tokenizer.h  tokenizer_test.cc
